@@ -1,3 +1,8 @@
+2015-12-10 Michele Pinamonti <michele.pinamonti@gmail.com>
+        * ReferenceSample option fixed (relative overall normalization variation kept)
+        * Image format propagated to syst plots
+        * PieChart plot fixed and moved to main output directory (as SignalRegions)
+        
 2015-12-06 Loic Valery <lvalery@cern.ch>
         * Improve tables by automating the script -> Still to be improved for the $$
         * Adding pie charts
